# rust-chat

./: .gitignore  Cargo.toml
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: broker.rs  events.rs  lib.rs  listener.rs  models.rs  writer.rs
server/: Cargo.toml
server/src/: main.rs
src/server/: lib.rs  listener.rs
