[package]
name = "chat"
version = "0.1.0"
authors = ["Prajith <kprajith@amazon.com>"]
edition = "2018"

[dependencies]
async-std = "1.6.2"
futures = "0.3.5"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
termion = "1.5.5"

[workspace]

members = [
    "client",
    "server",
    "common"
]

[lib]
name = "common"
path = "common/src/lib.rs"

[[bin]]
name = "server"
path = "server/src/main.rs"

[[bin]]
name = "client"
path = "client/src/main.rs"


