[package]
name = "common"
version = "0.1.0"
authors = ["Prajith <kprajith@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.6.2"
futures = "0.3.5"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
